# tabular

./: Cargo.toml  LICENSE  README.md
examples/: simple.rs
src/: lib.rs  main.rs  table.rs  tabular.rs
src/tabular/: action.rs  content.rs  reference.rs  theme.rs  update.rs  utils.rs
src/tabular/content/: list.rs
