[package]
name = "tabular"
version = "0.2.0"
edition = "2024"

[features]
serde = ["dep:serde"]

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = [
    "lazy",
    "advanced",
    "debug",
] }
serde = { version = "1.0", optional = true, features = ["derive"] }
